# network_analyzer

./: Cargo.toml  README.md  package.json  vite.config.ts
network_analyzer/: index.html  package.json
network_analyzer/src/: router.ts  style.css
network_analyzer/src-tauri/: Cargo.toml  tauri.conf.json
network_analyzer/src-tauri/src/: facade.rs  main.rs  net_logic.rs  tauri.rs
network_analyzer/src/api/: index.ts
network_analyzer/src/components/DeviceSelection/: DeviceEntry.vue  DevicePanel.vue
network_analyzer/src/components/NetworkRecording/: PacketEntry.vue
network_analyzer/src/components/common/: Title.vue
network_analyzer/src/models/: commons.ts  network.ts  rust_structs.ts
network_analyzer/src/views/: DeviceSelection.vue  NetworkRecording.vue  StartPage.vue
src/: App.vue  lib.rs  main.rs  net_logic.rs  style.css
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  net_logic.rs
src/api/: index.ts
src/components/NetworkRecording/: PacketEntry.vue
src/components/StartPage/: PulsingLogo.vue
src/components/common/: Button.vue
src/models/: commons.ts  rust_structs.ts
src/views/: DeviceSelection.vue  NetworkRecording.vue
standalone_app/: Cargo.toml
standalone_app/src/: facade.rs  lib.rs  main.rs  net_logic.rs
