[package]
name = "network_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.9"
pktparse = "0.7.1"
pcap = "0.11.0"
chrono = "0.4"
libc = "*"
csv = "1.1"
serde = { version = "1.0.147", features = ["derive"] }